#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(helloworld.c, 1.0, www.baidu.com)
AM_INIT_AUTOMAKE(feiexe)
AC_CONFIG_HEADER(feiconfig.h)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
